--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,9 +32,9 @@ jobs:
 
       - name: Build with Next.js
         run: npx next build
-      
-      - name: Export static site with Next.js
-        run: npx next export
+
+      - name: List files
+        run: ls -al
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
