--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sync-posts": "node sync-posts.js",
+    "push-posts": "npm run sync-posts && git add posts && git commit -m 'Sync Obsidian posts' && git push"
   },
   "dependencies": {
     "@radix-ui/react-navigation-menu": "^1.2.13",
@@ -14,6 +16,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.0.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.523.0",
     "next": "15.3.4",
